[gd_scene load_steps=2 format=3 uid="uid://poly_tool_ui"]

[ext_resource type="Script" path="res://src/ui/poly_tool_ui.gd" id="1_script"]

[node name="PolyToolUI" type="PanelContainer"]
custom_minimum_size = Vector2(640, 230)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Poly Tool Export"
horizontal_alignment = 1
autowrap_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Points: 0   Triangles: 0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="FilesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Saved GLTF (user://poly_exports)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="FileList" type="ItemList" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)

[node name="PathRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
theme_override_constants/separation = 8

[node name="PathLabel" type="Label" parent="MarginContainer/VBoxContainer/PathRow"]
text = "Path"
custom_minimum_size = Vector2(60, 0)
horizontal_alignment = 2

[node name="PathEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PathRow"]
size_flags_horizontal = 3
placeholder_text = "user://poly_exports/poly_export.gltf"

[node name="TimestampButton" type="Button" parent="MarginContainer/VBoxContainer/PathRow"]
text = "New name"
custom_minimum_size = Vector2(120, 0)

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
text = "Save GLTF"
custom_minimum_size = Vector2(0, 40)
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
text = "Load Selected"
custom_minimum_size = Vector2(0, 40)

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
text = "Refresh Counts"
custom_minimum_size = Vector2(0, 40)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = ""
horizontal_alignment = 1
autowrap_mode = 2

